--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cif2cell (1.2.10-2) unstable; urgency=low
+
+  * Add dependency on python3-pycifrw
+
+ -- Synge Todo <wistaria@phys.s.u-tokyo.ac.jp>  Tue, 05 May 2020 11:26:16 +0900
+
 cif2cell (1.2.10-1) unstable; urgency=low
 
   * Initial release for 1.2.10
